fixed footer section on mobile

--- a/styles.css
+++ b/styles.css
@@ -723,15 +723,16 @@ input[type="radio"]:disabled {
 
 
 .attribution{
+    display: flex;
+    justify-content: center;
     font-family: inherit;
     font-size: 18px;
-    padding: 30px;
-    margin-bottom: 20px;
+    margin: 50px 0;
+    padding: auto;
     background-color: whitesmoke ;
     width: 100%;
     height: 10px;
 }
-
 
 /**********************************************************************************/
 /**********************************************************************************/
@@ -1130,6 +1131,8 @@ input[type="radio"]:disabled {
     
         box-shadow: 0 3px 7px rgba(0, 0, 0, 0.1);
     }
+
+
     
 
 
@@ -1158,6 +1161,24 @@ input[type="radio"]:disabled {
         padding: 0;
         width: auto;
 
+    }
+
+
+    .attribution{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        font-size: 16px;
+        margin: 0;
+        padding: 20px 0;
+        background-color: whitesmoke ;
+        width: 100%;
+        height: 10px;
+
+        & a{
+            padding: 10px 0;
+        }
     }
 }
 
